corrections exos variables

--- a/[1] variables/package.json
+++ b/[1] variables/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start" : "tsc && node dist/demo.js"
+    "start-demo" : "tsc && node dist/demo.js",
+    "start-exos" : "tsc && node dist/exos.js"
   },
   "devDependencies": {
     "typescript": "^5.4.5"
